# CAD-IS

./: LICENSE  README.md  app.py  pyproject.toml
static/css/: styles.css
templates/: dashboard.html  home.html
templates/auth/: login.html
templates/layouts/: base.html  navs.html
